# boids-simulation

./: CMakeLists.txt  README.md
res/shaders/: fragment.shader  geometry.shader  vertex.shader
res/shaders/flock/: fragment.shader  geometry.shader  vertex.shader
res/shaders/obstacle/line/: fragment.shader  geometry.shader  vertex.shader
res/shaders/obstacle/point/: fragment.shader  geometry.shader  vertex.shader
src/: boid.cpp  boid.h  camera.cpp  camera.h  flock.cpp  flock.h  input.h  line_obstacle.h  main.cpp  obstacle.h  point_obstacle.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp
